Change log for Bos Wars
-----------------------

Version 2.5.0:
- Remove runtime libraries from the repository (Francois Beerten)
- Don't let an engineer build on top of itself (Jimmy Salmon)
- Allow recycling buildings under construction (Jimmy Salmon)
- Set the start position in campaign level 5 (Jimmy Salmon)
- Fix engineer build icons. (Francois Beerten)

Version 2.5.0 prerelease (2008 1 26):
- Replace magnifying glass cursor by a variant of the elites claw cursor.
(Francois Beerten)
- Fix screenshots at 16bpp (Jimmy Salmon)
- Show if the user cheated on the results screen (Jimmy Salmon)
- Add wetlands02 map (Lois Taulelle and llearch n'n'daCorna)
- Make the particle based explosions configureable (Francois Beerten)
- Fixed bug selecting a map in a subdir (Jimmy Salmon)
- Fix unload button on the APC unit (llearch n'n'daCorna) 
- Auto repair while patrolling (Jimmy Salmon)
- Added patrol button for engineer (Jimmy Salmon)
- Enable auto repair for engineers (Jimmy Salmon)
- Check for queued orders after harvesting a resource (Jimmy Salmon)
- Don't flush orders when repairing a building under construction (Jimmy Salmon)
- Don't create unnecessary flip images, saves a lot of mem (Jimmy Salmon and Francois Beerten)
- Camps can train engineers (Francois Beerten)
- Fix crash when killing a rafflesia (Francois Beerten)
- Added Swedish translation (Olov Gustavsson)
- Made message font and scroll speed configurable (Jimmy Salmon)
- Fixed rounding bug in minimap (Jimmy Salmon)
- Added Dutch translation (Foppe Benedictus, Eric Kok)
- Fixed hot keys in different languages (Jimmy Salmon)
- Added gimme cheat (Jimmy Salmon)
- Enable starting a map from the command line (Francois Beerten)
- Added StretchImage option to TitleScreen (Jimmy Salmon)
- Fixed crash disabling fog of war (Jimmy Salmon)
- Display the Bos Wars logo image by default instead of the video 
  (Sébastien Kerguen, Francois Beerten)
- Add missing const specifiers to fix compilation with 